Fix spacing for error messages

--- a/src/components/EngagementEditor/EngagementEditor.module.scss
+++ b/src/components/EngagementEditor/EngagementEditor.module.scss
@@ -146,7 +146,8 @@
 .error {
   color: $tc-red;
   font-size: 12px;
-  margin-top: 10px;
+  margin-top: 6px;
+  margin-left: 12px;
 }
 
 .actions {
